--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,114 +1,176 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/6385cb98ab.js" crossorigin="anonymous"></script>
-    
-    <title>Portal Gamer</title>
+    <title>Inicio - Eternal Gamers</title>
 </head>
-<body>
 
-    <div class="mainGrid">
-
-        <header class="topHeader text-light">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="pc.html"><i class="fas fa-bars fa-fw"></i> NAVEGAR</a>
-                        <ul>
-                            <li>
-                                <a class="text-dark" href="../index.html"> <i class="fas fa-home fa-fw"></i> Inicio</a>
-                            </li>
-                            <li>
-                                <a class="text-dark" href="pc.html"><i class="fas fa-desktop fa-fw"></i> PC</a>
-                            </li>
-                            <li>
-                                <a class="text-dark" href="pages/consoles.html"><i class="fas fa-gamepad fa-fw"></i> Consolas</a>
-                            </li>
-                            <li>
-                                <a class="text-dark" href="pages/mobiles.html"><i class="fas fa-mobile-alt fa-fw"></i> Móviles</a>
-                            </li>
-                            <li>
-                                <a class="text-dark" href="#"><i class="far fa-envelope fa-fw"></i></i> Contacto</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-            <div class="headerLogo">
-                <a href="index.html" class="ml-3 text-light">
-                    <h1 class="fontQuanticoBold">ETERNAL GAMERS</h1>
-                </a>
-            </div>
-        </header>
-
-        <div id="pcBackground">
-            <main class="container-sm br5 text-light bgDark p-3 mt-3">
-                lore
-            </main>
-        </div>
-
-        <footer class="mainFooter text-light">
-            <div class="row">
-                <article class="col-md-4">
-                    <h3 class="capitalize fontJura">Sobre Nosotros</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis ad aut facere consectetur aperiam ipsa ullam ut sapiente quisquam, illo officia quo accusantium, tempore amet in eveniet aspernatur voluptatum?</p>
-                    <h4 class="capitalize fontJura">Seguinos en nuestras redes sociales</h4>
-                    <div class="socialIcons">
-                        <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-                        <a class="text-light" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
-                        <a class="text-light" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
-                    </div>
-                </article>
-                <article class="col-md-2">
-                    <h4 class="capitalize fontJura">Navegar</h4>
-                    <ul class="listSquare listInside">
+<body class="d-flex flex-column">
+    <!-- ============================================= -->
+    <!-- SECTION Header -->
+    <!-- ============================================= -->
+    <header class="stickyHeader">
+        <nav class="navbar navbar-expand-md text-light p-0 topNavbar">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html"><i class="fas fa-bars fa-fw"></i> NAVEGAR</a>
+                    <!-- ANCHOR Sub-menu -->
+                    <ul>
                         <li>
-                            <a class="text-light" class="" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="../index.html"> <i class="fas fa-home fa-fw"></i>
+                                Inicio</a>
                         </li>
                         <li>
-                            <a class="text-light" href="pc.html">PC</a>
+                            <a class="nav-link" href="pc.html"><i class="fas fa-desktop fa-fw"></i> PC</a>
                         </li>
                         <li>
-                            <a class="text-light" href="consoles.html">Consolas</a>
+                            <a class="nav-link" href="consoles.html"><i class="fas fa-gamepad fa-fw"></i>
+                                Consolas</a>
                         </li>
                         <li>
-                            <a class="text-light" href="mobiles.html">Móviles</a>
+                            <a class="nav-link" href="mobiles.html"><i class="fas fa-mobile-alt fa-fw"></i>
+                                Móviles</a>
                         </li>
                         <li>
-                            <a class="text-light" href="contact.html">Contacto</a>
+                            <a class="nav-link" href="contact.html"><i class="far fa-envelope fa-fw"></i></i>
+                                Contacto</a>
                         </li>
                     </ul>
-                </article>
-                <article class="col-md-3">
-                    <div class="headerLogo">
-                        <a href="index.html" class="ml-3 text-light">
-                            <h1 class="fontQuanticoBold">ETERNAL GAMERS</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui hic fugit voluptate aperiam optio. Odit mollitia quasi nostrum consequatur accusamus consequuntur delectus nulla vitae veritatis! Inventore laudantium illum similique blanditiis.</p>
-                        </a>
-                    </div>
-                </article>
-                <article class="col-md-3 text-right">
-                    <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
-                    <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
-                    <p><em>Encontrame en mis redes sociales...</em></p>
-                    <div class="socialIcons">
-                        <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-                        <a class="text-light" href="#"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
-                        <a class="text-light" href="#"><i class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
-                    </div>
-                    <p><em>Josue Baez</em></p>
-                </article>
+                </li>
+            </ul>
+            <!-- ANCHOR logo -->
+            <a class="navbar-brand text-light" href="../index.html" class="ml-3 text-light">
+                <h1 class="d-none d-md-block fontQuanticoBold m-0">ETERNAL GAMERS</h1>
+            </a>
+        </nav>
+    </header>
+    <!-- ============================================= -->
+    <!-- !SECTION Header -->
+    <!-- ============================================= -->
+
+    <!-- ============================================= -->
+    <!-- SECTION Main Container -->
+    <!-- ============================================= -->
+    <main class="cod_background">
+        <section class="container mt-3 text-light containerBorderRadius bgMainBlack">
+            <div class="row">
+                <div class="col">
+                    <h1 class="red-underline">Formulario de contacto</h1>
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Nombre</label>
+                            <input class="form-control" type="text" name="name">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email">Correo electrónico</label>
+                            <input class="form-control" type="email" name="email">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="text">Mensaje</label>
+                            <textarea class="form-control" id="text" name="text" rows="5"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input class="btn btn-block btn-lg btn-outline-danger text-light" type="submit"
+                                value="Enviar">
+                        </div>
+                    </form>
+                </div>
             </div>
-        </footer>
-    </div>
+        </section>
+    </main>
+    <!-- ============================================= -->
+    <!-- !SECTION Main Container -->
+    <!-- ============================================= -->
+
+    <!-- ============================================= -->
+    <!-- SECTION Footer -->
+    <!-- ============================================= -->
+    <footer class="mt-5 text-light mainFooter">
+        <div class="row">
+            <!-- ANCHOR Columna 1 -->
+            <article class="col-sm-12 col-md-4 col-lg-4 text-center text-lg-left">
+                <h3 class="capitalize fontJura">Sobre Nosotros</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis ad aut facere
+                    consectetur
+                    aperiam ipsa ullam ut sapiente quisquam, illo officia quo accusantium, tempore amet in eveniet
+                    aspernatur voluptatum?</p>
+                <h4 class="capitalize fontJura">Seguinos en nuestras redes sociales</h4>
+                <div class="socialIcons">
+                    <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+                    <a class="text-light" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
+                    <a class="text-light" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
+                </div>
+            </article>
+            <!-- ANCHOR Columna 2 -->
+            <article class="col-md-2 d-none d-lg-block">
+                <h4 class="capitalize fontJura">Navegar</h4>
+                <ul class="listSquare listInside">
+                    <li>
+                        <a class="text-light" class="" href="index.html">Inicio</a>
+                    </li>
+                    <li>
+                        <a class="text-light" href="pages/pc.html">PC</a>
+                    </li>
+                    <li>
+                        <a class="text-light" href="pages/consoles.html">Consolas</a>
+                    </li>
+                    <li>
+                        <a class="text-light" href="pages/mobiles.html">Móviles</a>
+                    </li>
+                    <li>
+                        <a class="text-light" href="pages/contact.html">Contacto</a>
+                    </li>
+                </ul>
+            </article>
+            <!-- ANCHOR Columna 3 -->
+            <article class="col-md-4 col-lg-3 text-center text-lg-left mt-5 mt-md-0">
+                <div class="headerLogo">
+                    <div>
+                        <a href="index.html" class="text-light">
+                            <h1 class="fontQuanticoBold">ETERNAL GAMERS</h1>
+                        </a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui hic fugit voluptate aperiam
+                            optio.
+                            Odit mollitia quasi nostrum consequatur accusamus consequuntur delectus nulla vitae
+                            veritatis!
+                            Inventore laudantium illum similique blanditiis.</p>
+                    </div>
+                </div>
+            </article>
+            <!-- ANCHOR Columna 4 -->
+            <article class="col-md-4 col-lg-3 text-center text-lg-right mt-5 mt-md-0">
+                <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
+                <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
+                            class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
+                <p><em>Encontrame en mis redes sociales...</em></p>
+                <div class="socialIcons">
+                    <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+                    <a class="text-light" href="#"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+                    <a class="text-light" href="#"><i class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
+                </div>
+                <p><em>Josue Baez</em></p>
+            </article>
+        </div>
+    </footer>
+    <!-- ============================================= -->
+    <!-- !SECTION Footer -->
+    <!-- ============================================= -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6385cb98ab.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
