--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" type="text/css" href="plugins/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="plugins/slick/slick-theme.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
     <link rel="stylesheet" href="./css/styles.css">
     <title>Inicio - Eternal Gamers</title>
 </head>
@@ -19,7 +18,7 @@
     <!-- SECTION Header -->
     <!-- ============================================= -->
     <header class="stickyHeader">
-        <nav class="navbar navbar-expand-md text-light p-0 topNavbar">
+        <nav class="navbar text-light p-0 topNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html"><i class="fas fa-bars fa-fw"></i> NAVEGAR</a>
@@ -68,11 +67,12 @@
                 <!-- ============================================= -->
                 <section class="col-md-12">
                     <h1 class="red-underline">Últimos lanzamientos en videojuegos</h1>
-                    <div id="carouselLastestReleases" class="carousel slide" data-ride="carousel">
+
+                    <div id="carouselLastRealeases" class="carousel slide" data-bs-ride="carousel">
                         <ol class="carousel-indicators">
-                            <li data-target="#carouselLastestReleases" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselLastestReleases" data-slide-to="1"></li>
-                            <li data-target="#carouselLastestReleases" data-slide-to="2"></li>
+                            <li data-bs-target="#carouselLastRealeases" data-bs-slide-to="0" class="active"></li>
+                            <li data-bs-target="#carouselLastRealeases" data-bs-slide-to="1"></li>
+                            <li data-bs-target="#carouselLastRealeases" data-bs-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -84,8 +84,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./images/home/carousel/cod-cold-war.jpg" class="d-block w-100"
-                                    alt="cod-cold-war">
+                                <img src="./images/home/carousel/cod-cold-war.jpg" class="d-block w-100" alt="cod-cold-war">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Call of Duty: Black Ops - Cold War</h5>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -93,22 +92,22 @@
                             </div>
                             <div class="carousel-item">
                                 <img src="./images/home/carousel/yakuza.jpg" class="d-block w-100"
-                                    alt="yakuza-like-a-dragon">
+                                alt="yakuza-like-a-dragon">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Yakuza: Like a Dragon</h5>
                                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                                 </div>
                             </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselLastestReleases" role="button"
-                            data-slide="prev">
+                        <a class="carousel-control-prev" href="#carouselLastRealeases" role="button"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
+                            <span class="visually-hidden">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carouselLastestReleases" role="button"
-                            data-slide="next">
+                        <a class="carousel-control-next" href="#carouselLastRealeases" role="button"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
+                            <span class="visually-hidden">Next</span>
                         </a>
                     </div>
                 </section>
@@ -122,7 +121,7 @@
                 <section class="col-md-12 mt-3">
                     <h2 class="red-underline">Noticias destacadas</h2>
                     <div class="container">
-                        <div class="carouselNews">
+                        <div id="carouselNews">
                             <article class="m-1 outstandingNewsCard">
                                 <a href="">
                                     <img src="./images/home/news/cyberpunk.jpg" alt="cyberpunk-2077">
@@ -274,7 +273,7 @@
     <footer class="mt-5 text-light mainFooter">
         <div class="row">
             <!-- ANCHOR Columna 1 -->
-            <article class="col-sm-12 col-md-4 col-lg-4 text-center text-lg-left">
+            <article class="col-sm-12 col-md-4 col-lg-4 text-center text-lg-start">
                 <h3 class="capitalize fontJura">Sobre Nosotros</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga reiciendis ad aut facere
                     consectetur
@@ -309,7 +308,7 @@
                 </ul>
             </article>
             <!-- ANCHOR Columna 3 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-left mt-5 mt-md-0">
+            <article class="col-md-4 col-lg-3 text-center text-lg-start mt-5 mt-md-0">
                 <div class="headerLogo">
                     <div>
                         <a href="index.html" class="text-light">
@@ -324,7 +323,7 @@
                 </div>
             </article>
             <!-- ANCHOR Columna 4 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-right mt-5 mt-md-0">
+            <article class="col-md-4 col-lg-3 text-center text-lg-end mt-5 mt-md-0">
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
@@ -342,15 +341,15 @@
     <!-- !SECTION Footer -->
     <!-- ============================================= -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6385cb98ab.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="js/slick.js"></script>
+    <script src="js/index-slick.js"></script>
 
 </body>
 
