Se completo la el tab de playstation en la seccion de consolas, proyecto hasta desafio numero 13

--- a/pages/mobiles.html
+++ b/pages/mobiles.html
@@ -3,6 +3,36 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <!-- SEO meta tags -->
+    <meta name="description" content="Eternal Gamers es un portal de noticias del múndo de los videojuegos.">
+    <meta name="author" content="Josué Baez">
+    <meta name="keywords" content="gamers, videojuegos, noticias, lanzamientos, trailers, consolas, pc, xbox, nintendo">
+
+    <!-- OpenGraph -->
+    <meta property='og:title' content='Eternal Gamers' />
+    <meta property='og:description' content='Portal de noticias y reseñas del mundo gaming.' />
+    <meta property='og:image' content='images/main.png' />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="../images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -10,7 +40,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Móviles - Eternal Gamers</title>
+    <title>Eternal Gamers | Móviles</title>
 </head>
 
 <body class="d-flex flex-column">
@@ -239,67 +269,103 @@
     <!-- ============================================= -->
     <!-- SECTION Footer -->
     <!-- ============================================= -->
-    <footer class="mt-5 text-light mainFooter">
+    <footer class="mainfooter mt-5 text-light">
         <div class="row">
             <!-- ANCHOR Columna 1 -->
-            <article class="col-sm-12 col-md-4 col-lg-4 text-center text-lg-start">
+            <article class="mainfooter__column col-sm-12 col-md-4 col-lg-4 text-center text-lg-start">
                 <h3 class="capitalize fontJura">Sobre Nosotros</h3>
                 <p>
-                    Eternal Gamers es tu web favorita en videojuegos. Contamos con noticias, análisis de los últimos lanzamientos, imágenes, trailers oficiales y más…
+                    Eternal Gamers es tu web favorita en videojuegos. Contamos con noticias, análisis de los últimos
+                    lanzamientos, imágenes, trailers oficiales y más…
                 </p>
-                <h4 class="capitalize fontJura">Seguinos en nuestras redes sociales</h4>
-                <div class="socialIcons">
-                    <a class="text-light" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
-                </div>
-            </article>
-            <!-- ANCHOR Columna 2 -->
-            <article class="col-md-2 d-none d-lg-flex flex-column align-items-center">
-                <h4 class="capitalize fontJura">Navegar</h4>
-                <ul class="listSquare listInside">
-                    <li>
-                        <a class="text-light" class="" href="index.html">Inicio</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/pc.html">PC</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/consoles.html">Consolas</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/mobiles.html">Móviles</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/contact.html">Contacto</a>
-                    </li>
-                </ul>
+                <h4 class="capitalize">Seguinos en nuestras redes sociales</h4>
+                <a class="mainfooter__social-icon" href="#"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+                <a class="mainfooter__social-icon" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
+                <a class="mainfooter__social-icon" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
             </article>
             <!-- ANCHOR Columna 3 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-start mt-5 mt-md-0">
-                <div class="headerLogo">
-                    <div>
-                        <a href="index.html" class="text-light">
-                            <h1 class="fontQuanticoBold">ETERNAL GAMERS</h1>
-                        </a>
-                        <p>
-                            Obra de gamers para gamers.
-                        </p>
-                    </div>
-                </div>
-            </article>
-            <!-- ANCHOR Columna 4 -->
-            <article class="col-md-4 col-lg-3 text-center text-lg-end mt-5 mt-md-0">
+            <article class="mainfooter__column col-md-4 col-lg-3 text-center mt-5 mt-md-0">
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
                 <p><em>Encontrame en mis redes sociales...</em></p>
                 <div class="socialIcons">
-                    <a class="text-light" href="https://www.facebook.com/josueDev61"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="https://www.instagram.com/josuebaez61/"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
-                    <a class="text-light" href="www.linkedin.com/in/josuebaez15"><i class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
+                    <a class="mainfooter__social-icon" href="https://www.facebook.com/josueDev61"><i
+                            class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+                    <a class="mainfooter__social-icon" href="https://www.instagram.com/josuebaez61/"><i
+                            class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+                    <a class="mainfooter__social-icon" href="www.linkedin.com/in/josuebaez15"><i
+                            class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
                 </div>
                 <p><em>Josue Baez</em></p>
+            </article>
+            <!-- ANCHOR Columna 2 -->
+            <article class="mainfooter__column col-md-5 d-none d-lg-block">
+                <h3 class="capitalize font-quaticoBold">ETERNAL GAMERS | Mapa </h3>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <h5>Principal</h5>
+                        <ul class="listSquare listInside">
+                            <li>
+                                <a class="text-light" class="" href="index.html">Inicio</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html">PC</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="consoles.html">Consolas</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="mobiles.html">Móviles</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="contact.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>PC</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Consolas</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Móviles</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </article>
         </div>
     </footer>
