--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO meta tags -->
+    <meta name="description" content="Eternal Gamers es un portal de noticias del múndo de los videojuegos.">
+    <meta name="author" content="Josué Baez">
+    <meta name="keywords" content="gamers, videojuegos, noticias, lanzamientos, trailers, consolas, pc, xbox, nintendo">
+
+    <!-- OpenGraph -->
+    <meta property='og:title' content='Eternal Gamers' />
+    <meta property='og:description' content='Portal de noticias y reseñas del mundo gaming.' />
+    <meta property='og:image' content='images/main.png' />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -11,7 +41,7 @@
     <link rel="stylesheet" type="text/css" href="plugins/slick/slick-theme.css" />
     <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <link rel="stylesheet" href="./css/test.css">
-    <title>Inicio - Eternal Gamers</title>
+    <title>Eternal Gamers | Inicio</title>
 </head>
 
 <body class="d-flex flex-column">
@@ -50,7 +80,7 @@
             </ul>
             <!-- ANCHOR logo -->
             <a class="navbar-brand topheader__logo" href="index.html">
-                <h1>ETERNAL GAMERS</h1>
+                <h1 class="fs-4 fs-md-1">ETERNAL GAMERS</h1>
             </a>
         </nav>
     </header>
@@ -135,37 +165,37 @@
                     <div class="container">
                         <div class="slick-gallery slick-gallery--zoom slick-gallery--captions" id="carouselNews">
                             <article class="slick-gallery__item">
-                                <a href="pages/pc.html#nav-profile-tab">
+                                <a href="pages/pc.html#nav-news-tab">
                                     <img src="./images/home/news/cyberpunk.jpg" alt="cyberpunk-2077">
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
-                                <a href="pages/pc.html#nav-profile-tab">
+                                <a href="pages/pc.html#nav-news-tab">
                                     <img src="./images/home/news/watchdogs.jpg" alt="cyberpunk-2077">
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
-                                <a href="./pages/pc.html">
+                                <a href="pages/pc.html#nav-news-tab">
                                     <img src="./images/home/news/black-mesa.jpg" alt="cyberpunk-2077">
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
-                                <a href="#">
+                                <a href="pages/pc.html#nav-news-tab">
                                     <img src="./images/home/news/fortnite.jpg" alt="cyberpunk-2077">
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
-                                <a href="#">
+                                <a href="pages/pc.html#nav-news-tab">
                                     <img src="./images/home/news/doom.jpg" alt="cyberpunk-2077">
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
-                                <a href="#">
+                                <a href="pages/pc.html#nav-news-tab">
                                     <img src="./images/home/news/ps5.jpg" alt="cyberpunk-2077">
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                                 </a>
@@ -247,11 +277,18 @@
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">FIFA 21</h5>
- 
-                                    <p class="card-text">FIFA 21, analizado como un producto independiente y ajeno a su carácter anual, es una producción completa y repleta de horas de juego para todos los aficionados al fútbol virtual. No obstante, se trata de la entrega con menos novedades jugables en mucho tiempo, circunstancia que no premia a los jugadores que apuestan cada año por el simulador de EA Sports.
+
+                                    <p class="card-text">FIFA 21, analizado como un producto independiente y ajeno a su
+                                        carácter anual, es una producción completa y repleta de horas de juego para
+                                        todos los aficionados al fútbol virtual. No obstante, se trata de la entrega con
+                                        menos novedades jugables en mucho tiempo, circunstancia que no premia a los
+                                        jugadores que apuestan cada año por el simulador de EA Sports.
 
                                     </p>
-                                    <p class="card-text"><small class="text-light"> Toni Piedrabuena - 3DJUEGOS / <a class="text-light" href="https://www.3djuegos.com/juegos/analisis/37068/0/fifa-21/">Fuente</a></small></p>
+                                    <p class="card-text"><small class="text-light"> Toni Piedrabuena - 3DJUEGOS / <a
+                                                class="text-light"
+                                                href="https://www.3djuegos.com/juegos/analisis/37068/0/fifa-21/">Fuente</a></small>
+                                    </p>
                                     <span class="mb-2">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -284,7 +321,8 @@
                     </article>
                     <article class=" mt-2">
                         <h3>Descubrí ROG</h3>
-                        <a href="pages/pc.html#nav-hardware-tab"><img class="w-100" src="./images/pc/hardware/rog-gif.gif" alt="rog-gif"></a>
+                        <a href="pages/pc.html#nav-hardware-tab"><img class="w-100"
+                                src="./images/pc/hardware/rog-gif.gif" alt="rog-gif"></a>
                     </article>
                 </aside>
                 <!-- ============================================= -->
@@ -311,39 +349,8 @@
                 <a class="mainfooter__social-icon" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
                 <a class="mainfooter__social-icon" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
             </article>
-            <!-- ANCHOR Columna 2 -->
-            <article class="mainfooter__column col-md-2 d-none d-lg-flex flex-column align-items-center">
-                <h4 class="capitalize fontJura">Navegar</h4>
-                <ul class="listSquare listInside">
-                    <li>
-                        <a class="text-light" class="" href="index.html">Inicio</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/pc.html">PC</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/consoles.html">Consolas</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/mobiles.html">Móviles</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pages/contact.html">Contacto</a>
-                    </li>
-                </ul>
-            </article>
             <!-- ANCHOR Columna 3 -->
-            <article class="mainfooter__column col-md-4 col-lg-3 text-center text-lg-start mt-5 mt-md-0">
-                <div class="headerLogo">
-                    <div>
-                        <a href="index.html" class="text-light">
-                            <h1>ETERNAL GAMERS</h1>
-                        </a>
-                    </div>
-                </div>
-            </article>
-            <!-- ANCHOR Columna 4 -->
-            <article class="mainfooter__column col-md-4 col-lg-3 text-center text-lg-end mt-5 mt-md-0">
+            <article class="mainfooter__column col-md-4 col-lg-3 text-center mt-5 mt-md-0">
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
@@ -357,6 +364,74 @@
                             class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
                 </div>
                 <p><em>Josue Baez</em></p>
+            </article>
+            <!-- ANCHOR Columna 2 -->
+            <article class="mainfooter__column col-md-5 d-none d-lg-block">
+                <h3 class="capitalize font-quaticoBold">ETERNAL GAMERS | Mapa </h3>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <h5>Principal</h5>
+                        <ul class="listSquare listInside">
+                            <li>
+                                <a class="text-light" class="" href="index.html">Inicio</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/pc.html">PC</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/consoles.html">Consolas</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/mobiles.html">Móviles</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/contact.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>PC</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pages/pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Consolas</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pages/pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Móviles</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pages/pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pages/pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </article>
         </div>
     </footer>
