--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,13 +3,43 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <!-- SEO meta tags -->
+    <meta name="description" content="Eternal Gamers es un portal de noticias del múndo de los videojuegos.">
+    <meta name="author" content="Josué Baez">
+    <meta name="keywords" content="gamers, videojuegos, noticias, lanzamientos, trailers, consolas, pc, xbox, nintendo">
+
+    <!-- OpenGraph -->
+    <meta property='og:title' content='Eternal Gamers' />
+    <meta property='og:description' content='Portal de noticias y reseñas del mundo gaming.' />
+    <meta property='og:image' content='images/main.png' />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="../images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- <link rel="stylesheet" href="../css/styles.css"> -->
     <link rel="stylesheet" href="../css/test.css">
-    <title>Inicio - Eternal Gamers</title>
+    <title>Eternal Gamers | Contacto</title>
 </head>
 
 <body class="d-flex flex-column">
@@ -115,39 +145,8 @@
                 <a class="mainfooter__social-icon" href="#"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a>
                 <a class="mainfooter__social-icon" href="#"><i class="fa fa-youtube fa-fw" aria-hidden="true"></i></a>
             </article>
-            <!-- ANCHOR Columna 2 -->
-            <article class="mainfooter__column col-md-2 d-none d-lg-flex flex-column align-items-center">
-                <h4 class="capitalize fontJura">Navegar</h4>
-                <ul class="listSquare listInside">
-                    <li>
-                        <a class="text-light" class="" href="../index.html">Inicio</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="pc.html">PC</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="consoles.html">Consolas</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="mobiles.html">Móviles</a>
-                    </li>
-                    <li>
-                        <a class="text-light" href="contact.html">Contacto</a>
-                    </li>
-                </ul>
-            </article>
             <!-- ANCHOR Columna 3 -->
-            <article class="mainfooter__column col-md-4 col-lg-3 text-center text-lg-start mt-5 mt-md-0">
-                <div class="headerLogo">
-                    <div>
-                        <a href="index.html" class="text-light">
-                            <h1>ETERNAL GAMERS</h1>
-                        </a>
-                    </div>
-                </div>
-            </article>
-            <!-- ANCHOR Columna 4 -->
-            <article class="mainfooter__column col-md-4 col-lg-3 text-center text-lg-end mt-5 mt-md-0">
+            <article class="mainfooter__column col-md-4 col-lg-3 text-center mt-5 mt-md-0">
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
@@ -161,6 +160,74 @@
                             class="fa fa-linkedin fa-fw" aria-hidden="true"></i></a>
                 </div>
                 <p><em>Josue Baez</em></p>
+            </article>
+            <!-- ANCHOR Columna 2 -->
+            <article class="mainfooter__column col-md-5 d-none d-lg-block">
+                <h3 class="capitalize font-quaticoBold">ETERNAL GAMERS | Mapa </h3>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <h5>Principal</h5>
+                        <ul class="listSquare listInside">
+                            <li>
+                                <a class="text-light" class="" href="index.html">Inicio</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html">PC</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="consoles.html">Consolas</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="mobiles.html">Móviles</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="contact.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>PC</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Consolas</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>Móviles</h5>
+                        <ul>
+                            <li>
+                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
+                            </li>
+                            <li>
+                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </article>
         </div>
     </footer>
