Removida seccion moviles

--- a/index.html
+++ b/index.html
@@ -68,10 +68,6 @@
                                 Consolas</a>
                         </li>
                         <li class="topheader__submenu-item">
-                            <a class="nav-link" href="pages/mobiles.html"><i class="fas fa-mobile-alt fa-fw"></i>
-                                Móviles</a>
-                        </li>
-                        <li class="topheader__submenu-item">
                             <a class="nav-link" href="pages/contact.html"><i class="far fa-envelope fa-fw"></i></i>
                                 Contacto</a>
                         </li>
@@ -354,7 +350,6 @@
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
-                <p><em>Encontrame en mis redes sociales...</em></p>
                 <div class="socialIcons">
                     <a class="mainfooter__social-icon" href="https://www.facebook.com/josueDev61"><i
                             class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
@@ -367,8 +362,8 @@
             </article>
             <!-- ANCHOR Columna 2 -->
             <article class="mainfooter__column col-md-5 d-none d-lg-block">
-                <h3 class="capitalize font-quaticoBold">ETERNAL GAMERS | Mapa </h3>
-                <div class="row mt-3">
+                <h3 class="capitalize font-quaticoBold">ETERNAL GAMERS | Mapa del sitio</h3>
+                <div class="row mt-3 justify-content-around">
                     <div class="col-md-3">
                         <h5>Principal</h5>
                         <ul class="listSquare listInside">
@@ -380,9 +375,6 @@
                             </li>
                             <li>
                                 <a class="text-light" href="pages/consoles.html">Consolas</a>
-                            </li>
-                            <li>
-                                <a class="text-light" href="pages/mobiles.html">Móviles</a>
                             </li>
                             <li>
                                 <a class="text-light" href="pages/contact.html">Contacto</a>
@@ -407,27 +399,13 @@
                         <h5>Consolas</h5>
                         <ul>
                             <li>
-                                <a class="text-light" class="" href="pages/pc.html#nav-featured-tab">Destacados</a>
+                                <a class="text-light" class="" href="pages/consoles.html#nav-playstation-tab">Playstation</a>
                             </li>
                             <li>
-                                <a class="text-light" href="pages/pc.html#nav-news-tab">Noticias</a>
+                                <a class="text-light" href="pages/consoles.html#nav-xbox-tab">Xbox</a>
                             </li>
                             <li>
-                                <a class="text-light" href="pages/pc.html#nav-hardware-tab">Hardware</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h5>Móviles</h5>
-                        <ul>
-                            <li>
-                                <a class="text-light" class="" href="pages/pc.html#nav-featured-tab">Destacados</a>
-                            </li>
-                            <li>
-                                <a class="text-light" href="pages/pc.html#nav-news-tab">Noticias</a>
-                            </li>
-                            <li>
-                                <a class="text-light" href="pages/pc.html#nav-hardware-tab">Hardware</a>
+                                <a class="text-light" href="pages/consoles.html#nav-nintendo-tab">Nintendo</a>
                             </li>
                         </ul>
                     </div>
