--- a/pages/consoles.html
+++ b/pages/consoles.html
@@ -70,10 +70,6 @@
                                 Consolas</a>
                         </li>
                         <li class="topheader__submenu-item">
-                            <a class="nav-link" href="mobiles.html"><i class="fas fa-mobile-alt fa-fw"></i>
-                                Móviles</a>
-                        </li>
-                        <li class="topheader__submenu-item">
                             <a class="nav-link" href="contact.html"><i class="far fa-envelope fa-fw"></i></i>
                                 Contacto</a>
                         </li>
@@ -562,7 +558,6 @@
                 <h4 class="capitalize fontJura">Sobre el autor de esta página</h4>
                 <p><a class="text-light" href="mailto:josuebaez61@gmail.com?subject=Contacto"><i
                             class="fa fa-envelope fa-fw"></i> josuebaez@gmail.com</a></p>
-                <p><em>Encontrame en mis redes sociales...</em></p>
                 <div class="socialIcons">
                     <a class="mainfooter__social-icon" href="https://www.facebook.com/josueDev61"><i
                             class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
@@ -575,22 +570,19 @@
             </article>
             <!-- ANCHOR Columna 2 -->
             <article class="mainfooter__column col-md-5 d-none d-lg-block">
-                <h3 class="capitalize font-quaticoBold">ETERNAL GAMERS | Mapa </h3>
-                <div class="row mt-3">
+                <h3 class="capitalize font-quaticoBold">ETERNAL GAMERS | Mapa del sitio</h3>
+                <div class="row mt-3 justify-content-around">
                     <div class="col-md-3">
                         <h5>Principal</h5>
                         <ul class="listSquare listInside">
                             <li>
-                                <a class="text-light" class="" href="index.html">Inicio</a>
+                                <a class="text-light" class="" href="../index.html">Inicio</a>
                             </li>
                             <li>
                                 <a class="text-light" href="pc.html">PC</a>
                             </li>
                             <li>
                                 <a class="text-light" href="consoles.html">Consolas</a>
-                            </li>
-                            <li>
-                                <a class="text-light" href="mobiles.html">Móviles</a>
                             </li>
                             <li>
                                 <a class="text-light" href="contact.html">Contacto</a>
@@ -615,27 +607,13 @@
                         <h5>Consolas</h5>
                         <ul>
                             <li>
-                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
+                                <a class="text-light" class="" href="consoles.html#nav-playstation-tab">Playstation</a>
                             </li>
                             <li>
-                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
+                                <a class="text-light" href="consoles.html#nav-xbox-tab">Xbox</a>
                             </li>
                             <li>
-                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h5>Móviles</h5>
-                        <ul>
-                            <li>
-                                <a class="text-light" class="" href="pc.html#nav-featured-tab">Destacados</a>
-                            </li>
-                            <li>
-                                <a class="text-light" href="pc.html#nav-news-tab">Noticias</a>
-                            </li>
-                            <li>
-                                <a class="text-light" href="pc.html#nav-hardware-tab">Hardware</a>
+                                <a class="text-light" href="consoles.html#nav-nintendo-tab">Nintendo</a>
                             </li>
                         </ul>
                     </div>
@@ -646,7 +624,7 @@
     <!-- ============================================= -->
     <!-- !SECTION Footer -->
     <!-- ============================================= -->
-
+    
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
