Cambios en el menu de navegacion. Ahora se despliega gracias a un script toggle de jQuery.

--- a/pages/pc.html
+++ b/pages/pc.html
@@ -53,8 +53,7 @@
         <nav class="topheader__nav navbar text-light p-0">
             <ul class="navbar-nav mr-auto">
                 <li class="topheader__item nav-item">
-                    <a class="nav-link" href="../index.html"><i class="fas fa-bars fa-fw"></i> <span
-                            class="d-none d-lg-inline">NAVEGAR</span></a>
+                    <button class="btn nav-link"><i class="fas fa-bars fa-fw"></i></button>
                     <!-- ANCHOR Sub-menu -->
                     <ul class="topheader__submenu">
                         <li class="topheader__submenu-item">
@@ -1176,6 +1175,9 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6385cb98ab.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+
+    <script src="../js/main.js"></script>
     <script src="../js/pc-slick.js"></script>
     <script src="../js/index-slick.js"></script>
 </body>
