--- a/pages/consoles.html
+++ b/pages/consoles.html
@@ -53,8 +53,7 @@
         <nav class="topheader__nav navbar text-light p-0">
             <ul class="navbar-nav mr-auto">
                 <li class="topheader__item nav-item">
-                    <a class="nav-link" href="../index.html"><i class="fas fa-bars fa-fw"></i> <span
-                            class="d-none d-lg-inline">NAVEGAR</span></a>
+                    <button class="btn nav-link"><i class="fas fa-bars fa-fw"></i></button>
                     <!-- ANCHOR Sub-menu -->
                     <ul class="topheader__submenu">
                         <li class="topheader__submenu-item">
@@ -546,8 +545,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6385cb98ab.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/consoles.js"></script>
 </body>
 
