--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,8 +49,7 @@
         <nav class="topheader__nav navbar text-light p-0">
             <ul class="navbar-nav mr-auto">
                 <li class="topheader__item nav-item">
-                    <a class="nav-link" href="index.html"><i class="fas fa-bars fa-fw"></i> <span
-                            class="d-none d-lg-inline">NAVEGAR</span></a>
+                    <button class="btn nav-link"><i class="fas fa-bars fa-fw"></i></button>
                     <!-- ANCHOR Sub-menu -->
                     <ul class="topheader__submenu">
                         <li class="topheader__submenu-item">
@@ -73,14 +72,13 @@
             </ul>
             <!-- ANCHOR logo -->
             <a class="navbar-brand topheader__logo" href="../index.html">
-                <h1>ETERNAL GAMERS</h1>
+                <h1 class="fs-4 fs-md-1">ETERNAL GAMERS</h1>
             </a>
         </nav>
     </header>
     <!-- ============================================= -->
     <!-- !SECTION Header -->
     <!-- ============================================= -->
-
     <!-- ============================================= -->
     <!-- SECTION Main Container -->
     <!-- ============================================= -->
@@ -211,14 +209,16 @@
     <!-- ============================================= -->
     <!-- !SECTION Footer -->
     <!-- ============================================= -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6385cb98ab.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
