Se quito el border radius de la clase form-control de bootstrap, Se pulieron ultimos detalles.

--- a/index.html
+++ b/index.html
@@ -161,37 +161,37 @@
                             <article class="slick-gallery__item">
                                 <a href="pages/pc.html#nav-news-tab">
                                     <img src="./images/home/news/cyberpunk.jpg" alt="cyberpunk-2077">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                    <p>Cyberpunk 2077.</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
                                 <a href="pages/pc.html#nav-news-tab">
-                                    <img src="./images/home/news/watchdogs.jpg" alt="cyberpunk-2077">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                    <img src="./images/home/news/watchdogs.jpg" alt="Watch Dogs LEGION">
+                                    <p>Watch Dogs LEGION</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
                                 <a href="pages/pc.html#nav-news-tab">
-                                    <img src="./images/home/news/black-mesa.jpg" alt="cyberpunk-2077">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                    <img src="./images/home/news/black-mesa.jpg" alt="Black Mesa: Definitive Edition">
+                                    <p>Black Mesa: Definitive Edition</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
                                 <a href="pages/pc.html#nav-news-tab">
-                                    <img src="./images/home/news/fortnite.jpg" alt="cyberpunk-2077">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                    <img src="./images/home/news/fortnite.jpg" alt="Fortnite">
+                                    <p>Fortnite</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
                                 <a href="pages/pc.html#nav-news-tab">
-                                    <img src="./images/home/news/doom.jpg" alt="cyberpunk-2077">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                    <img src="./images/home/news/doom.jpg" alt="DOOM Eternal">
+                                    <p>DOOM Eternal</p>
                                 </a>
                             </article>
                             <article class="slick-gallery__item">
                                 <a href="pages/pc.html#nav-news-tab">
-                                    <img src="./images/home/news/ps5.jpg" alt="cyberpunk-2077">
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                    <img src="./images/home/news/ps5.jpg" alt="PS5">
+                                    <p>Playstation 5</p>
                                 </a>
                             </article>
                         </div>
