--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,7 +83,7 @@
     <!-- SECTION Main Container -->
     <!-- ============================================= -->
     <main class="mainblock mainblock--cod">
-        <section class="mainblock__content container">
+        <section class="mainblock__content mainblock__content--small container">
             <!-- ANCHOR breadcrumb -->
             <div class="d-flex justify-content-end text-end fontJura container breadcrumb-custom-block">
                 <ol class="breadcrumb breadcrumb-custom-block__ol">
