Se aplico correccion a atributos alt de las imagenes

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="slick-gallery slick-gallery--zoom slick-gallery--captions" id="carouselNews">
                             <article class="slick-gallery__item">
                                 <a href="pages/pc.html#nav-news-tab">
-                                    <img src="./images/home/news/cyberpunk.jpg" alt="cyberpunk-2077">
+                                    <img src="./images/home/news/cyberpunk.jpg" alt="Cyberpunk-2077">
                                     <p>Cyberpunk 2077.</p>
                                 </a>
                             </article>
@@ -206,7 +206,7 @@
                         <div class="row no-gutters">
                             <div class="col-md-4">
                                 <img src="./images/home/reviews/demon-souls.jpg" class="card-img horizontal-card__image"
-                                    alt="...">
+                                    alt="Demon's Souls Portada">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -237,7 +237,7 @@
                         <div class="row no-gutters">
                             <div class="col-md-4">
                                 <img src="./images/home/reviews/resident-evil3.jpg"
-                                    class="card-img horizontal-card__image" alt="...">
+                                    class="card-img horizontal-card__image" alt="Resident Evil 3 Portada">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -266,7 +266,7 @@
                         <div class="row no-gutters">
                             <div class="col-md-4">
                                 <img src="./images/home/reviews/fifa21.jpg" class="card-img horizontal-card__image"
-                                    alt="...">
+                                    alt="FIFA 21 Portada">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
