--- a/pages/consoles.html
+++ b/pages/consoles.html
@@ -118,10 +118,10 @@
                                 <div class="row">
                                     <div class="col-md-8 text-center align-self-center">
                                         <img class="ps5-logo1 mt-3 mt-lg-0" src="../images/consoles/ps5/ps5-logo1.png"
-                                            alt="">
+                                            alt="PS5 Logo">
                                         <div class="top-header__img-container mt-3 mt-lg-0 d-md-none">
                                             <img class="w-100" src="../images/consoles/ps5/ps5-render.png"
-                                                alt="playstation5">
+                                                alt="Playstation 5">
                                         </div>
                                         <h2 class="tab-header__title">PlayStation®5</h2>
                                         <p class="tab-header__subtitle">
@@ -130,7 +130,7 @@
                                     </div>
                                     <div class="col-md-4 top-header__img-container d-none d-md-block">
                                         <img class="w-100" src="../images/consoles/ps5/ps5-render.png"
-                                            alt="playstation5">
+                                            alt="Playstation 5">
                                     </div>
                                 </div>
                             </div>
@@ -228,7 +228,7 @@
                                                 </div>
                                                 <div class="col-md-4 order-0 order-lg-1 text-center">
                                                     <img class="ps5-comparison__image"
-                                                        src="../images/consoles/ps5/ps5-render.png" alt="playstation5">
+                                                        src="../images/consoles/ps5/ps5-render.png" alt="Playstation 5">
                                                 </div>
                                             </div>
                                         </div>
@@ -239,7 +239,7 @@
                                                 <div class="col-md-4 text-center">
                                                     <img class="ps5-comparison__image"
                                                         src="../images/consoles/ps5/ps5digital-render.png"
-                                                        alt="playstation5">
+                                                        alt="Playstation 5 Digital">
                                                 </div>
                                                 <div class="col-md-5 ps5-comparison__text text-center text-md-start">
                                                     <h4>Más características de la consola PS5 edición digital</h4>
@@ -365,7 +365,7 @@
                     <section class="row xbox-container">
                         <div class="col-md-12">
                             <div class="full-width-container position-relative">
-                                <img class="w-100" src="../images/consoles/xbox/valhalla.jpg" alt="joystick-xbox">
+                                <img class="w-100" src="../images/consoles/xbox/valhalla.jpg" alt="Assassins Creed Valhalla background">
                                 <div class="row g-0 p-2 position-absolute justify-content-center mt-md-3"
                                     style="top: 0px;">
                                     <article class="col-md-3 d-none d-md-block">
@@ -443,7 +443,7 @@
                                         </div>
                                         <div class="col-md-4 order-md-1 text-center">
                                             <img class="nintendo-threeinone__modeicon"
-                                                src="../images/consoles/nintendo/tabletop.png" alt="tv-mode">
+                                                src="../images/consoles/nintendo/tabletop.png" alt="tablet-mode">
                                         </div>
                                         <div class="col-md-4 order-md-2 text-center">
                                             <p class="nintendo-threeinon__desc">Coloca la consola Nintendo Switch en la
@@ -451,7 +451,7 @@
                                         </div>
                                         <div class="col-md-4 order-md-1 text-center">
                                             <img class="nintendo-threeinone__modeicon"
-                                                src="../images/consoles/nintendo/handheld.png" alt="tv-mode">
+                                                src="../images/consoles/nintendo/handheld.png" alt="handheld-mode">
                                         </div>
                                         <div class="col-md-4 order-md-2 text-center">
                                             <p class="nintendo-threeinon__desc">Coloca la consola Nintendo Switch en la
