Se agrego pagina 404, y archivo .htaccess

--- a/pages/consoles.html
+++ b/pages/consoles.html
@@ -416,13 +416,13 @@
                     <div class="mt-3 nintendo-container">
                         <header>
                             <img class="w-100" src="../images/consoles/nintendo/nintendo1.jpg"
-                                alt="nintendo-switch-banner">
+                                alt="Nintendo Switch Banner">
                         </header>
                         <section class="p-3">
                             <article class="row g-0 nintendo-threeinone">
                                 <div class="col-md-5">
                                     <img class="img-fluid" src="../images/consoles/nintendo/three-modes-in-one.png"
-                                        alt="three-modes-in-one">
+                                        alt="Tres modos en una sola consola">
                                 </div>
                                 <div class="col-md-7 align-self-center text-center text-lg-start">
                                     <h4>Tres modos en uno</h4>
